[package]
name = "fhe_strings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tfhe = { git = "https://github.com/zama-ai/tfhe-rs", branch = "main",  features = ["integer"] }
rayon = "1.8.0"
serde = "1.0.190"
clap = "=4.4.4"